# gaia

./: .dockerignore  .gitignore  .impeccable.md  .jscpd.json  .madgerc  .mcp.json  .nxignore  .pre-commit-config.yaml  .release-please-manifest.json  .secrets.baseline  .syncpackrc.json  .worktreeinclude  2026-04-01-dead-code-backend.md  2026-04-01-dead-code-frontend.md  2026-04-11-035413-this-session-is-being-continued-from-a-previous-c.txt  2026-04-24-011518-this-session-is-being-continued-from-a-previous-c.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  README.md  biome.json  cf-build.sh  chat1.txt  chat2.txt  chat3.txt  ci-restructure.md  conductor.json  context.md  dagger.json  design.tokens.json  docker-compose.prod.yml  docker-compose.yml  knip.config.ts  knip.json  mise.toml  mprocs.yaml  nx.json  (+9 more)
apps/api/: .coverage  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.voice-agent  mise.toml  models_backup_20260528_014837.json  project.json  pyproject.toml  pytest.ini  vulture_whitelist.py
apps/api/app/: __init__.py  main.py  worker.py
apps/api/app/config/: acontext_spaces.py  cloudinary.py  constants.py  langfuse.py  loggers.py  logging.py  model_pricing.py  oauth_config.py  oauth_content.py  opik.py  posthog.py  rate_limits.py  secrets.py  sentry.py  settings.py  settings_validator.py  token_repository.py
apps/api/app/constants/: agents.py  artifacts.py  auth.py  cache.py  calendar.py  chat.py  credits.py  desktop.py  email.py  error_codes.py  executor.py  files.py  general.py  integrations.py  keys.py  llm.py  log_tags.py  mcp.py  memory.py  notifications.py  offload.py  outbound.py  profession_bios.py  referrals.py  sandbox.py  search.py  skills.py  startup.py  streaming.py  summarization.py  todos.py  tool_labels.py  vfs.py  voices.py
apps/api/app/core/: acontext_client.py  app_factory.py  bot_auth_middleware.py  lazy_loader.py  lifespan.py  middleware.py  provider_registration.py  stream_manager.py  websocket_consumer.py  websocket_manager.py
apps/api/app/db/: chromadb.py  postgresql.py  rabbitmq.py  redis.py  utils.py
apps/api/app/decorators/: caching.py  (+6 more)
apps/api/scripts/: arq_healthcheck.py  backfill_bot_conversation_source.py  backfill_integration_content.py  backfill_integration_favicons.py  build_e2b_template.py  check_outbound_topology_parity.py  cleanup_workflows.py  credits_setup.py  dedupe_graph_edges.py  dump_config_schema.py  extract_heavy_deps.py  fetch_composio_triggers.py  fix_marketplace_mcp.py  fix_subscription_data.py  format_juicefs_shards.py  grant_pro_access.py  index_workflows_chromadb.py  jfs_launcher.py  materialize_user_workspace.py  migrate_mem0_memories.py  migrate_vfs_to_juicefs.py  migrate_workflow_schedule_types.py  migrate_workflow_slugs.py  migrate_workflow_status_liveness.py  mount_juicefs.sh  payment_setup.py  populate_gaia_knowledge.py  probe_artifact_detection.py  recategorize_memories.py  reembed_memories.py  reseed_system_triggers.py  seed_explore_workflows.py  seed_models.py  seed_public_integrations.py  sync_composio_tools.py  test_email_memory.py  test_email_processor.py  test_tracked_todos.py  verify_sandbox_hardening.sh  verify_sandbox_mounts.py  (+1 more)
apps/api/tests/: CLAUDE.md  README.md  __init__.py  conftest.py  factories.py  helpers.py  test_openui_prompts.py
apps/voice-agent/: CLAUDE.md  Dockerfile  mise.toml  project.json  pyproject.toml
apps/voice-agent/src/: __init__.py  __main__.py  agent.py  config.py  constants.py  llm.py  utils.py  worker.py
backend/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  mise.toml  pyproject.toml
backend/app/: worker.py
backend/app/config/: loggers.py  mcp_registry.py  oauth_config.py  posthog.py  rate_limits.py  secrets.py  sentry.py  settings.py  settings_validator.py  token_repository.py
backend/app/constants/: general.py  keys.py  llm.py  profession_bios.py
backend/app/core/: app_factory.py  lazy_loader.py  lifespan.py  provider_registration.py
backend/app/db/: chromadb.py  chromadb_store.py  rabbitmq.py  redis.py
backend/app/decorators/: __init__.py  caching.py  calendar_auth.py  integration.py  profiling.py  rate_limiting.py
backend/app/helpers/: agent_helpers.py  email_helpers.py  lifespan_helpers.py  message_helpers.py
backend/app/models/: calendar_models.py  chat_models.py  mail_models.py  mcp_models.py  memory_models.py  oauth_models.py  search_models.py  user_models.py  workflow_models.py
backend/app/patches/: composio_request_id.py  jsonplus.py
backend/app/scripts/: seed_power_user.py
backend/app/services/: blog_service.py  calendar_service.py  chat_service.py  conversation_service.py  goals_service.py  memory_service.py  model_service.py  notes_service.py  oauth_service.py  onboarding_service.py  post_onboarding_service.py
backend/app/tasks/: reminder_tasks.py
backend/app/utils/: calendar_utils.py  chat_utils.py  embedding_utils.py  general_utils.py  integration_checker.py  internet_utils.py  memory_utils.py  plan_and_execute_utils.py  profile_card.py  search_utils.py  seeding_utils.py  storage_utils.py
backend/scripts/: __init__.py  payment_setup.py  seed_explore_workflows.py  seed_models.py  seed_workflows.py  test_profile_memory_storage.py
backend/voice_agent/: Dockerfile  pyproject.toml
backend/voice_agent/src/: voice_agent.py
libs/: pyproject.toml
libs/chat-ui/: README.md  package.json  tsconfig.json  tsup.config.ts
libs/chat-ui/src/: index.ts  styles.css
libs/shared/: CLAUDE.md  __init__.py  project.json
libs/shared/py/: __init__.py  logging.py  project.json  secrets.py  wide_events.py
libs/shared/ts/: package.json  project.json  tsconfig.json  vitest.config.ts
libs/wake-word/: .gitignore  README.md  package.json  project.json  tsconfig.json  vitest.config.ts
libs/wake-word/models/: hey_gaia.meta.json
libs/wake-word/scripts/: describe_models.py  fetch-models.sh  probe.py
libs/wake-word/src/: index.ts
libs/wake-word/test/: pipeline.test.ts  setup-models.ts  wav.ts
libs/wake-word/training/: README.md  pyproject.toml
(+7599 files in other folders)
