[project]
name = "gaia-wake-word-training"
version = "0.1.0"
description = "Train a custom 'Hey GAIA' classifier head for the openWakeWord pipeline using synthetic Piper TTS data."
requires-python = ">=3.10,<3.13"
dependencies = [
  "openwakeword>=0.6.0",
  "piper-tts>=1.2.0",
  "numpy>=1.26",
  "onnx>=1.16",
  "onnxruntime>=1.20",
  "scipy>=1.13",
  "soundfile>=0.12",
  "tqdm>=4.66",
  "datasets>=2.20",
  "librosa>=0.10",
  "torch>=2.3",
  "torchaudio>=2.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
